@@ -53,6 +53,7 @@ void DrawFromExtraScreen (PRECT r);
 void SetGraphicGrabOther (int grab_other);
 void SetGraphicScale (int scale);
 int  GetGraphicScale (void);
+int  GetGraphicScaleIdentity (void);
 void SetGraphicUseOtherExtra (int other);
 void ScreenTransition (int transition, PRECT pRect);
 
